# jnc

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  README.md  appveyor.yml  manager  pom.xml
.github/: functions.sh
.github/workflows/: build.yml
.travis/: settings.xml
docs/: build.md
jnc-examples/: pom.xml
jnc-examples/jnc-example-primitive/: nbactions.xml  pom.xml
jnc-examples/jnc-example-primitive/src/main/java/jnc/example/: Libc.java  Memcpy.java
jnc-examples/jnc-example-primitive/src/test/java/jnc/example/: LibcTest.java
jnc-runtime/: pom.xml
jnc-runtime/src/main/java/jnc/foreign/: Arch.java  FieldAccessor.java  Foreign.java  ForeignProvider.java  ForeignProviders.java  LibraryLoader.java  LoadOptions.java  LoadOptionsBuilder.java  MemoryManager.java  NativeType.java  OS.java  Padding.java  Platform.java  Pointer.java  State.java  Struct.java  StructArray.java  Type.java  TypeHandler.java  Union.java
jnc-runtime/src/main/java/jnc/foreign/abi/: CallingConvention.java  CallingConvertion.java  CallingMode.java  Default.java  Stdcall.java
jnc-runtime/src/main/java/jnc/foreign/annotation/: ByValue.java  CallingConvention.java  Continuously.java  ContinuouslyEnum.java  Default.java  DefaultConvention.java  Delegate.java  EnumMappingErrorAction.java  In.java  Out.java  Pack.java  SetLastError.java  Stdcall.java  Typedef.java  UnmappableNativeValueException.java
jnc-runtime/src/main/java/jnc/foreign/byref/: AddressByReference.java  ByReference.java  ByteByReference.java  CharByReference.java  DoubleByReference.java  FloatByReference.java  IntByReference.java  LongByReference.java  NativeLongByReference.java  PointerByReference.java  ShortByReference.java  Uint32ByReference.java
jnc-runtime/src/main/java/jnc/foreign/enums/: CallingConvention.java  EnumMappingErrorAction.java  TypeAlias.java
jnc-runtime/src/main/java/jnc/foreign/exception/: InvalidAnnotationException.java  JniLoadingException.java  UnmappableNativeValueException.java
jnc-runtime/src/main/java/jnc/foreign/internal/: AbstractMemory.java  Alias.java  AliasFactory.java  Aligns.java  AllocatedMemory.java  AnnotatedElementContext.java  AnnotationContext.java  AnnotationContextImpl.java  AnnotationUtil.java  BuiltinType.java  BuiltinTypeConstants.java  BuiltinTypeHelper.java  ByReferenceTypeHandler.java  CallContext.java  CharsetUtil.java  Charsets.java  CifCallContext.java  CifContainer.java  CifStruct.java  ClassAnnotationContext.java  Cleaner.java  CombineAnnotationContext.java  ConcurrentWeakIdentityHashMap.java  DefaultForeign.java  DefaultForeignProvider.java  DefaultMemoryManager.java  DefaultMethodInvoker.java  DefaultPlatform.java  DirectMemory.java  DummyNativeMethod.java  EmptyMemoryHolder.java  Entry.java  EnumHandlerInfo.java  EnumTypeHandler.java  FFIType.java  FixedMethodInvocation.java  ForeignImpl.java  InternalType.java  InternalTypeHandler.java  InvocationLibrary.java  (+55 more)
jnc-runtime/src/main/java/jnc/provider/: Alias.java  AllocatedMemory.java  AnnotationContext.java  AnnotationContextImpl.java  ArrayMemoryCopy.java  BuiltinType.java  ByReferenceHandler.java  CallContext.java  CharsetUtil.java  CifCallContext.java  CifContainer.java  Cleaner.java  CombineAnnotationContext.java  ConcurrentWeakIdentityHashMap.java  DefaultForeign.java  DefaultForeignProvider.java  DefaultLastErrorHandler.java  DefaultMemoryManager.java  DefaultMethodInvoker.java  DefaultPlatform.java  EmptyMemoryHolder.java  Entry.java  EnumHandlerInfo.java  EnumHandlers.java  EnumTypeHandler.java  FixedMethodInvocation.java  InternalType.java  InvocationLibrary.java  InvokeHandler.java  InvokerHandlerInfo.java  LastErrorHandler.java  Library.java  Memory.java  MemoryAccessor.java  MethodHandler.java  MethodInvocation.java  NativeAccessor.java  NativeLibrary.java  NativeLoader.java  NativeMethods.java  (+29 more)
jnc-runtime/src/main/native/: .gitignore  AddressAccess.c  Alias.cpp  ArrayAccess.c  CMakeLists.txt  Invoke.c  Library.c  Makefile  buffer.c  jnc.h  linux-arm.cmake  load.c  memory.c  nb.yml  toolchain-mingw.cmake  types.c
jnc-runtime/src/main/native/darwin/include/: ffi.h  ffitarget.h
jnc-runtime/src/main/native/jni/: jni.h
jnc-runtime/src/main/native/nbproject/: configurations.xml  project.xml
jnc-runtime/src/main/native/nbproject/private/: configurations.xml
jnc-runtime/src/main/native/src/: AddressAccess.c  Alias.cpp  ArrayAccess.c  Invoke.c  Library.c  base.h  buffer.c  cif.cpp  exception.c  exception.cpp  exception.h  invoke.c  invoke.cpp  jnc.h  library.c  library.cpp  load.c  load.cpp  memory.c  memory.cpp  memory_access.c  memory_access.cpp  strings.cpp  types.c  types.cpp  types.h
jnc-runtime/src/main/scripts/: ant.xml
jnc-runtime/src/test/groovy/: hide-annotation.groovy
jnc-runtime/src/test/java/jnc/foreign/: AlignTest.java  ForeignProvidersTest.java  ForeignTest.java  GetPidTest.java  InvokeTest.java  LibraryLoaderTest.java  PaddingTest.java  PlatformTest.java  StructMemberArrayGenerator.java  StructTest.java  TestLibs.java  UnionTest.java  WindowsTest.java
jnc-runtime/src/test/java/jnc/provider/: AllocatedMemoryTest.java  AnnotationContextTest.java  BuiltinType.java  CharsetUtilTest.java  CifContainerTest.java  CleanerTest.java  ConcurrentWeakIdentityHashMapTest.java  ConversionsGenerator.java  DefaultMethodInvokerTest.java  EnumTypeHandlerTest.java  InvocationLibraryTest.java  MemoryAccessorTest.java  MemoryTest.java  NativeLoaderTest.java  NativeMethodsTest.java  NotFinalTest.java  PrimitiveConverterTest.java  ProxyBuilderTest.java  SizedDirectMemoryTest.java  SleepUtil.java  StringCodingAllCharsetsTest.java  StringCodingTest.java  TypeFactoryTest.java  TypeInfo.java  VariadicMethodInvocationTest.java
lib/darwin/: libjnc.jnilib
libjnc/: CMakeLists.txt  default_toolchain.cmake  nb.yml  windows.cmake
libjnc/jni/: jni.h  jni_md.h
libjnc/src/: base.h  cif.cpp  commons.h  convert.h  exception.cpp  exception.h  invoke.cpp  jnc.h  jnc_type_traits.h  library.cpp  load.cpp  memory.cpp  memory_access.cpp  strings.cpp  types.cpp
(+143 files in other folders)
